Test/git-issues/git-issue-3366.dfy.expect
git-issue-3366.dfy(16,17): Error: Side-effect methods calls such as constructors are not allowed in expressions.
1 parse errors detected in git-issue-3366.dfy
